fix: fix footer appearance on small devices and boost pride version number

--- a/_src/assets/_scss/core/_variables.scss
+++ b/_src/assets/_scss/core/_variables.scss
@@ -97,6 +97,7 @@ $font-semibold: 600;
 
 // 4. Breakpoints
 // ---
+$bp-mobile-large: 414;
 $bp-tablet-v: 768;
 $bp-tablet-h: 1024;
 $bp-desktop: 1280;
